--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,290 +1,28 @@
   <!-- navbar -->
-  <nav class="navbar navbar-expand-lg " id="home" style="background-color: #4BA47E; padding: 0px;">
-    <div class="container">
-      <a class="navbar-brand" routerLinkActive="/" href="/">
-        <img src="assets/images/petship-logo.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('about')">Hakkımızda</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" routerLink="/login" routerLinkActive="active" aria-current="page" href="#" >Profilim</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('contact')">İletişim</a>
-          </li>
-          <p-avatar icon="pi pi-user" styleClass="mr-2" shape="circle"></p-avatar>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<div id="home">
 
-
-
-
-
-  <!-- banner -->
-  <div id="carouselExampleAutoplaying" class="carousel slide mb-5" data-bs-ride="carousel" style="background-color: #4BA47E;;">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="assets/images/banner-image.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/images/banner-image3.png" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">geri</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">ileri</span>
-    </button>
-  </div>
-
-
-
-
-  <!-- kategorielr -->
-  <div class="container ">
-    <div >
-      <div class="text-center " style=" margin-bottom: 40px;">
-        <h1 style="margin-bottom: 40px; font-style: italic;">Kategoriler </h1>
-        <i class="fas fa-heart fa-2x"></i>
-      </div>
-      <div class="row d-flex justify-content-center mb-3 kategori-butonlar">
-        <div class="col-4 ">
-          <div class="rounded-left d-flex justify-content-center">
-            <img (click)="seciliKategori = 'kedi'" src="assets/images/kedi-image.png" class="mr-2 btn-img rounded-circle bg-image hover-zoom">
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="rounded-left d-flex justify-content-center">
-            <img (click)="seciliKategori = 'köpek'" src="assets/images/dog.png" class="mr-2 btn-img rounded-circle">
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="rounded-left d-flex justify-content-center">
-            <img (click)="seciliKategori = 'kuş'" src="assets/images/kus-image.png" class="mr-2 btn-img rounded-circle">
-          </div>
-        </div>
-      </div>
-  </div>
-
-
-
-
-    <!-- kartlar -->
-
-<div  class="kategori-kartlarm">
- <div class="container">
-  <div *ngIf="seciliKategori === 'kedi'">
-    <div class="row">
-      <div class="col-md-2 " *ngFor="let kedi of kediKartlar; let i = index">
-        <div class="card mb-4 category-card" (mouseenter)="kedi.showButton = true" (mouseleave)="kedi.showButton = false">
-          <img [src]="'assets/images/' + kedi.gorseli" alt="Kedi Görseli" class="card-img-top">
-          <div class="card-body">
-            <h5 class="card-title">{{ kedi.adi }}</h5>
-            <p class="card-text">Yaşı: {{ kedi.yasi }}</p>
-            <p class="card-text">Cinsiyeti: {{ kedi.cinsiyeti }}</p>
-            <div class="ikonlar">
-              <button class="btn btn-warning btn-lg" *ngIf="kedi.showButton" (click)="playAnimation(i)">
-                <i class="fas fa-comments"></i>
-              </button>
-              <button class="btn btn-info btn-lg" *ngIf="kedi.showButton" (click)="showDialog()" icon="pi pi-external-link" label="Show">
-                <i class="fas fa-info-circle"></i>
-              </button>
-            </div>
-
-          </div>
-
-          <div class="card flex justify-content-center">
-
-            <p-dialog header="Long Content" [(visible)]="visible" [style]="{ width: '50vw', height: '300px' }">
-              <div class="modal-content">
-                <div id="modalContent">
-                  <img [src]="'assets/images/' + kedi.gorseli" alt="Kedi Görseli" class="modal-image">
-                  <div class="text-container">
-                    <h5 class="card-title">{{ kedi.adi }}</h5>
-                    <p class="card-text">Yaşı: {{ kedi.yasi }}</p>
-                    <p class="card-text">Cinsiyeti: {{ kedi.cinsiyeti }}</p>
-                    <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
-                  </div>
-                </div>
-              </div>
-
-            </p-dialog>
-        </div>
-
-        </div>
-            <div id="animationContainer" class="animation-container" *ngIf="animationVisible && seciliKartIndex === i"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-    <div *ngIf="seciliKategori === 'köpek'">
-      <div class="row">
-      <div class="col-md-2" *ngFor="let kopek of kopekKartlar; let i = index">
-        <div class="card mb-4 category-card" (mouseenter)="kopek.showButton = true" (mouseleave)="kopek.showButton = false">
-          <img [src]="'assets/images/' + kopek.gorseli" alt="Kedi Görseli" class="card-img-top">
-          <div class="card-body">
-            <h5 class="card-title">{{ kopek.adi }}</h5>
-            <p class="card-text">Yaşı: {{ kopek.yasi }}</p>
-            <p class="card-text">Cinsiyeti: {{ kopek.cinsiyeti }}</p>
-            <div class="ikonlar">
-              <button class="btn btn-warning btn-lg" *ngIf="kopek.showButton" (click)="playAnimation(i)">
-                <i class="fas fa-comments"></i>
-              </button>
-              <button class="btn btn-info btn-lg" *ngIf="kopek.showButton" (click)="showDialog()" icon="pi pi-external-link" label="Show">
-                <i class="fas fa-info-circle"></i>
-              </button>
-
-              <div class="card flex justify-content-center">
-
-                <p-dialog header="Long Content" [(visible)]="visible" [style]="{ width: '50vw', height: '300px' }">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
-            </p-dialog>
-            </div>
-            </div>
-            <div id="animationContainer" class="animation-container" *ngIf="animationVisible && seciliKartIndex === i"></div>
-          </div>
-        </div>
-      </div>
-      </div>
-
-    </div>
-
-    <div *ngIf="seciliKategori === 'kuş'">
-      <div class="row">
-        <div class="col-md-2" *ngFor="let kus of kusKartlar; let i = index">
-          <div class="card mb-4 category-card " (mouseenter)="kus.showButton = true" (mouseleave)="kus.showButton = false">
-            <img [src]="'assets/images/' + kus.gorseli" alt="Kedi Görseli" class="card-img-top">
-            <div class="card-body">
-              <h5 class="card-title">{{ kus.adi }}</h5>
-              <p class="card-text">Yaşı: {{ kus.yasi }}</p>
-              <p class="card-text">Cinsiyeti: {{ kus.cinsiyeti }}</p>
-              <button class="btn btn-warning btn-lg" *ngIf="kus.showButton" (click)="playAnimation(i)">
-                <i class="fas fa-comments"></i>
-              </button>
-              <div class="ikonlar">
-                <button class="btn btn-warning btn-lg" *ngIf="kus.showButton" (click)="playAnimation(i)">
-                  <i class="fas fa-comments"></i>
-                </button>
-                <button class="btn btn-info btn-lg" *ngIf="kus.showButton" (click)="showDialog()" icon="pi pi-external-link" label="Show">
-                  <i class="fas fa-info-circle"></i>
-                </button>
-
-                <div class="card flex justify-content-center">
-
-                  <p-dialog header="Long Content" [(visible)]="visible" [style]="{ width: '50vw', height: '300px' }">
-                      <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                      </p>
-              </p-dialog>
-              </div>
-              <div id="animationContainer" class="animation-container" *ngIf="animationVisible && seciliKartIndex === i"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
- </div>
+  <app-navbar></app-navbar>
 </div>
 
 
 
+<app-banner></app-banner>
 
 
 
-
-
-<!-- hakkımzda -->
-
-
-  <div id="about" class="container" style="padding-top: 150px; padding-bottom: 180px;">
-    <div class="card mb-3" id="about">
-      <div class="row g-0">
-        <div class="col-md-6">
-          <div class="lottie-container" #lottieContainer></div>
-        </div>
-        <div class="col-md-6" style="display: flex; justify-content: center; align-items: center;">
-          <div class="card-body" style="text-align: center; max-width: 550px;">
-            <h2 class="card-title" style="margin-bottom: 20px;">ABOUT</h2>
-            <i class="fas fa-heart fa-lg"></i>
-            <p class="card-text" style="max-width: 300px; " style="margin-top: 20px;">burada bir about kısmı olacak burada bir about kısmı olacak burada bir about kısmı olacak
-              burada bir about kısmı olacak burada bir about kısmı olacak burada bir about kısmı olacak
-              about kısmı olacak burada bir about kısmı olacakabout kısmı olacak burada bir about kısmı olacak
-              about kısmı olacak burada bir about kısmı olacakabout kısmı olacak burada bir about kısmı olacak .</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<app-kategori></app-kategori>
 
 
 
-
-
-  <!-- FOOTER -->
-  <div id="contact" class="container-fulid footer"  style="margin-top: 65px;">
-    <div class="row">
-      <div class="col-md-5">
-        <h4>Hakkımızda</h4>
-        <p>Petship Sitemiz, evsiz yavrularımızı sıcak bir yuvaya sahiplendirerek onlara yeni bir yuva bulma amacıyla kurulmuştur
-        evsiz yavrularımızı sıcak bir yuvaya sahiplendirerek onlara yeni bir yuva bulma amacıyla kurulmuştur.</p>
-        <div style="width: 100%; margin-top: 75px;" >
-          <h4>Sosyal Medya</h4>
-          <div class="social-media">
-            <li><a href="https://www.facebook.com" target="_blank"><img src="assets/social-svg/facebook.svg" alt="Facebook"></a></li>
-          <li><a href="https://www.instagram.com" target="_blank"><img src="assets/social-svg/instagram.svg" alt="Instagram"></a></li>
-          <li><a href="https://www.twitter.com" target="_blank"><img src="assets/social-svg/twitter.svg" alt="Twitter"></a></li>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <h4>İletişim</h4>
-        <p>Email: info@hayvansahiplendirme.com</p>
-        <p>Telefon: 123-456-7890</p>
-        <div style="width: 70%; margin-top: 100px;" >
-          <h4 >Hızlı Linkler</h4>
-          <div class="list">
-          <li><a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('home')">Anasayfa</a></li>
-          <li><a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('about')">Hakkımızda</a></li>
-          <li><a class="nav-link active" routerLink="/login" routerLinkActive="active" aria-current="page" href="#" >Profilim</a></li>
-          <li><a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" href="#iletisim">İletişim</a></li>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3  ">
-        <img src="assets/images/transparent-logo.png" alt="Logo" width="300" height="300">
-      </div>
-    </div>
-    </div>
-    <div class="container-fulid" style="background-color: #f0f0f0; ">
-      <div class="col-md-12 text-center " style="height: 40px;">
-        <p>&copy; 2023 Petship. Tüm hakları saklıdır.</p>
-      </div>
-  </div>
+<div id="about">
+  <app-about></app-about>
+</div>
 
 
 
+<div id="contact">
+  <app-footer></app-footer>
+</div>
 
-  <div class="to-top" [ngClass]="{'show-scrolltop': isScrollingDown}" (click)="scrollToTop()">
-    <div #animationContainer></div>
-  </div>
 
 
