--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,7 +1,12 @@
+
+/* FOOTER */ /*Pes ediyorum*/
 .footer {
   background-color: #f8f9fa;
-  padding: 30px 0;
   font-family: 'Roboto', sans-serif;
+  display: flex;
+   justify-content: space-around; 
+   align-items: center ; 
+   padding: 50px 100px 50px 100px;
 }
 
 .footer h4 {
@@ -16,6 +21,7 @@
   font-size: 14px;
   line-height: 1.5;
   margin-bottom: 10px;
+  width: 80%;
 }
 
 .footer .row {
@@ -32,23 +38,25 @@
   font-size: 12px;
 }
 
+
+
+.social-media li a {
+  text-decoration: none;
+} 
 .social-media {
+  list-style: none;  
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   list-style: none;
   padding: 0;
   margin-bottom: 20px;
+  width: 90%;
 }
 
-.social-media li {
-  margin: 0 10px;
-}
+
 
 .social-media img {
-  width: 35%;
-  height: 60%;
-  float: left;
-  margin-left: 5%;
+  width: 30%;
 }
 
 .quick-links {
@@ -75,4 +83,74 @@
 
 .quick-links li a:hover {
   color: #333;
+}
+.list{
+  display: flex;   
+  list-style: none;  
+  justify-content: space-between;
+}
+
+.list li a {
+  text-decoration: none;
+  color: #333;
+}
+
+.modal-content {
+  display: flex;
+  align-items: center;
+  width: auto;
+  max-width: 100%;
+  height: auto;
+  max-height: 80vh;
+  
+}
+
+.modal-content #modalContent {
+  display: flex;
+  align-items: center;
+}
+
+.modal-content #modalContent img {
+  width: 50%;
+  margin-right: 10px;
+  overflow-y: auto;
+  overflow-x: auto;
+  position:relative;
+  top: 0;
+}
+
+.modal-image
+{
+  top: 0;
+  left: 0;
+}
+
+
+
+.modal-content #modalContent .text-container {
+  width: 50%;
+}
+
+
+/* up button */
+.to-top {
+  position: fixed;
+  bottom: 2px;
+  right: 2px;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  opacity: 0;
+  transition: all 0.2s ease-in-out;
+}
+
+.show-scrolltop {
+  opacity: 1;
+
+  
+  
 }
