--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,42 +1,48 @@
-<footer class="footer">
-  <div class="container">
+
+  <!-- FOOTER -->
+  <div id="contact" class="container-fulid footer"  style="margin-top: 65px;">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-5">
         <h4>Hakkımızda</h4>
-        <p>Petship Sitemiz, evsiz yavrularımızı sıcak bir yuvaya sahiplendirerek onlara yeni bir yuva bulma amacıyla kurulmuştur.</p>
+        <p>Petship Sitemiz, evsiz yavrularımızı sıcak bir yuvaya sahiplendirerek onlara yeni bir yuva bulma amacıyla kurulmuştur
+        evsiz yavrularımızı sıcak bir yuvaya sahiplendirerek onlara yeni bir yuva bulma amacıyla kurulmuştur.</p>
+        <div style="width: 100%; margin-top: 75px;" >
+          <h4>Sosyal Medya</h4>
+          <div class="social-media">
+            <li><a href="https://www.facebook.com" target="_blank"><img src="assets/social-svg/facebook.svg" alt="Facebook"></a></li>
+          <li><a href="https://www.instagram.com" target="_blank"><img src="assets/social-svg/instagram.svg" alt="Instagram"></a></li>
+          <li><a href="https://www.twitter.com" target="_blank"><img src="assets/social-svg/twitter.svg" alt="Twitter"></a></li>
+          </div>
+        </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
         <h4>İletişim</h4>
         <p>Email: info@hayvansahiplendirme.com</p>
         <p>Telefon: 123-456-7890</p>
+        <div style="width: 70%; margin-top: 100px;" >
+          <h4 >Hızlı Linkler</h4>
+          <div class="list">
+          <li><a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('home')">Anasayfa</a></li>
+          <li><a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('about')">Hakkımızda</a></li>
+          <li><a class="nav-link active" routerLink="/login" routerLinkActive="active" aria-current="page" href="#" >Profilim</a></li>
+          <li><a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" href="#iletisim">İletişim</a></li>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3  ">
+        <img src="assets/images/transparent-logo.png" alt="Logo" width="300" height="300">
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-6">
-        <h4>Sosyal Medya</h4>
-        <ul class="social-media">
-          <li><a href="https://www.facebook.com" target="_blank"><img src="assets/facebook.svg" alt="Facebook"></a></li>
-          <li><a href="https://www.instagram.com" target="_blank"><img src="assets/instagram.svg" alt="Instagram"></a></li>
-          <li><a href="https://www.twitter.com" target="_blank"><img src="assets/twitter.svg" alt="Twitter"></a></li>
-        </ul>
-      </div>
-      <div class="col-md-6">
-        <h4>Hızlı Linkler</h4>
-        <ul class="quick-links">
-          <li><a href="#">Hakkımızda</a></li>
-          <li><a href="#">SSS</a></li>
-          <li><a href="#">İletişim</a></li>
-        </ul>
-      </div>
-    </div>  <img src="assets/petship-logo2.png" alt="Logo" width="50" height="50">
-    <div class="row">
-      <div class="col-md-12 text-center">
+    </div>
+    <div class="container-fulid" style="background-color: #f0f0f0; ">
+      <div class="col-md-12 text-center " style="height: 40px;">
         <p>&copy; 2023 Petship. Tüm hakları saklıdır.</p>
       </div>
-    </div>
-    <div style="background-color: blue;">
-
-      <ul><li><img src="assets/petship-logo2.png" alt="Logo" width="50" height="50"></li></ul></div>
-
   </div>
-</footer>
+
+
+
+
+  <div class="to-top" [ngClass]="{'show-scrolltop': isScrollingDown}" (click)="scrollToTop()">
+    <div #animationContainer></div>
+  </div>
