--- a/src/app/components/pagess/profile/profile-panel/categories-listes/categories-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/categories-listes/categories-listes.component.html
@@ -14,16 +14,17 @@
         [globalFilterFields]="['name', 'country.name', 'representative.name', 'status']"
     >
     <ng-template pTemplate="caption">
-        <div class="table-header">
-          <div style="display: flex; justify-content: flex-end; gap: 14px;">
-            
-                <button pButton type="button" label="Kategori Ekle" class="p-button-success"></button>
-                <button pButton type="button" label="Kategori Sil" class="p-button-danger"></button>
-              
-              
+        
+          <div class="table-header">
+            <div style="display: flex; justify-content: flex-end; gap: 14px;">
+              <button pButton type="button" class="p-button-success" icon="pi pi-plus"></button>
+              <button pButton type="button" class="p-button-danger" icon="pi pi-trash"></button>
+
+            </div>
           </div>
-        </div>
+        
       </ng-template>
+      
       
         <ng-template pTemplate="header">
             <tr>
@@ -38,32 +39,6 @@
                     </div>
                 </th>
                 
-                <th pSortableColumn="representative.name" style="min-width: 14rem">
-                    <div class="flex justify-content-between align-items-center">
-                        Resim
-                        
-                        <p-columnFilter field="representative" matchMode="in" display="menu" [showMatchModes]="false" [showOperator]="false" [showAddButton]="false" class="ml-auto">
-                            <ng-template pTemplate="header">
-                                <div class="px-3 pt-3 pb-0">
-                                    <span class="font-bold">Agent Picker</span>
-                                </div>
-                            </ng-template>
-                            <ng-template pTemplate="filter" let-value let-filter="filterCallback">
-                                
-                                    <ng-template let-option pTemplate="item">
-                                        <div class="inline-block vertical-align-middle">
-                                            <img [alt]="option.label" src="https://primefaces.org/cdn/primeng/images/demo/avatar/{{ option.image }}" width="24" class="vertical-align-middle" />
-                                            
-                                        </div>
-                                    </ng-template>
-                                
-                            </ng-template>
-                        </p-columnFilter>
-                    </div>
-                </th>
-               
-               
-               
                 
                 <th style="width: 5rem"></th>
             </tr>
@@ -72,6 +47,7 @@
             <tr class="p-selectable-row">
                 <td>
                     <p-tableCheckbox [value]="customer"></p-tableCheckbox>
+
                 </td>
                 <td>
                     <span class="p-column-title">Name</span>
@@ -79,20 +55,14 @@
                 </td>
                
                 <td>
-                    <span class="p-column-title">Representative</span>
+                    
                     <img src="https://primefaces.org/cdn/primeng/images/demo/avatar/{{ customer.representative.image }}" width="32" style="vertical-align: middle" />
                     
                 </td>
                
                
-                
-                
             </tr>
         </ng-template>
-        <ng-template pTemplate="emptymessage">
-            <tr>
-                <td colspan="8">No customers found.</td>
-            </tr>
-        </ng-template>
+        
     </p-table>
 </div>
