--- a/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.html
@@ -1,24 +1,18 @@
-
+<!--TOOLBAR-->
 <div class="card">
   <p-toast></p-toast>
   <p-toolbar styleClass="mb-4 gap-2">
     <ng-template pTemplate="left">
-      <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success mr-2" (click)="openNew()"></button>
-      <button pButton pRipple label="Delete" icon="pi pi-trash" class="p-button-danger" (click)="deleteSelectedProducts()" [disabled]="!selectedProducts || !selectedProducts.length"></button>
+      <button pButton pRipple label="İlan Ekle" icon="pi pi-plus" class="p-button-success mr-2" (click)="openNew()"></button>
   </ng-template>
-
-      <ng-template pTemplate="right">
-          <p-fileUpload mode="basic" accept="image/*" [maxFileSize]="1000000" label="Import" chooseLabel="Import" class="mr-2 inline-block"></p-fileUpload>
-          <button pButton pRipple label="Export" icon="pi pi-upload" class="p-button-help"></button>
-      </ng-template>
   </p-toolbar>
 
+
+  <!--TABLE -->
   <p-table
       #dt
       [value]="products"
-      [rows]="10"
-      [paginator]="true"
-      [globalFilterFields]="['name', 'country.name', 'representative.name', 'status']"
+      [globalFilterFields]="['name', 'country.name', 'representative.name']"
       [tableStyle]="{ 'min-width': '75rem' }"
       [(selection)]="selectedProducts"
       [rowHover]="true"
@@ -26,39 +20,27 @@
       currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
       [showCurrentPageReport]="true"
   >
-      <ng-template pTemplate="caption">
-          <div class="flex align-items-center justify-content-between">
-              <h5 class="m-0">Manage Products</h5>
-              Object is possibly 'null'.
-          </div>
-      </ng-template>
+
       <ng-template pTemplate="header">
           <tr>
               <th style="width: 4rem">
-                  <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+            
               </th>
-              <th pSortableColumn="name" style="min-width:15rem">Name <p-sortIcon field="name"></p-sortIcon></th>
+              <th pSortableColumn="name" style="width: 25%;" >Name <p-sortIcon field="name"></p-sortIcon></th>
               <th>Image</th>
-              <th pSortableColumn="price">Price <p-sortIcon field="price"></p-sortIcon></th>
-              <th pSortableColumn="category" style="min-width:10rem">Category <p-sortIcon field="category"></p-sortIcon></th>
-              <th pSortableColumn="rating">Reviews <p-sortIcon field="rating"></p-sortIcon></th>
-              <th pSortableColumn="inventoryStatus" style="min-width:10rem">Status <p-sortIcon field="inventoryStatus"></p-sortIcon></th>
+              <th pSortableColumn="category" style="width: 25%;">Category <p-sortIcon field="category"></p-sortIcon></th>
+              <th pSortableColumn="rating" style="width: 25%;">Reviews <p-sortIcon field="rating"></p-sortIcon></th>
               <th></th>
           </tr>
       </ng-template>
       <ng-template pTemplate="body" let-product>
           <tr>
-              <td>
-                  <p-tableCheckbox [value]="product"></p-tableCheckbox>
-              </td>
               <td>{{ product.name }}</td>
               <td><img [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image" [alt]="product.name" width="50" class="shadow-4" /></td>
-              <td>{{ product.price | currency: 'USD' }}</td>
+             
               <td>{{ product.category }}</td>
               <td><p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating></td>
-              <td>
-                  <p-tag [value]="product.inventoryStatus" [severity]="getSeverity(product.inventoryStatus)"></p-tag>
-              </td>
+           
               <td>
                   <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2" (click)="editProduct(product)"></button>
                   <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" (click)="deleteProduct(product)"></button>
@@ -70,7 +52,7 @@
       </ng-template>
   </p-table>
 </div>
-<p-dialog [(visible)]="productDialog" [style]="{ width: '450px' }" header="Product Details" [modal]="true" styleClass="p-fluid">
+<p-dialog [(visible)]="productDialog" [style]="{ width: '450px' }" header="Pet Details" [modal]="true" styleClass="p-fluid">
   <ng-template pTemplate="content">
       <img [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image" [alt]="product.image" class="block m-auto pb-3" *ngIf="product.image" />
       <div class="field">
@@ -84,48 +66,33 @@
       </div>
 
       <div class="field">
-          <label for="inventoryStatus">Inventory Status</label>
-          <p-dropdown [(ngModel)]="product.inventoryStatus" inputId="inventoryStatus" [options]="statuses">
               <ng-template pTemplate="selectedItem">
-                <p-tag [value]="product.inventoryStatus ? product.inventoryStatus.toUpperCase() : ''" [severity]="getSeverity(product.inventoryStatus ? product.inventoryStatus.toUpperCase() : '')"></p-tag>
               </ng-template>
               <ng-template let-option pTemplate="item">
                   <p-tag [value]="option.label" [severity]="getSeverity(option.label)"></p-tag>
               </ng-template>
-          </p-dropdown>
       </div>
 
       <div class="field">
           <label class="mb-3">Category</label>
           <div class="formgrid grid">
               <div class="field-radiobutton col-6">
-                  <p-radioButton id="category1" name="category" value="Accessories" [(ngModel)]="product.category"></p-radioButton>
-                  <label for="category1">Accessories</label>
+                  <p-radioButton id="category1" name="category" value="Kedi" [(ngModel)]="product.category"></p-radioButton>
+                  <label for="category1">Kedi</label>
               </div>
               <div class="field-radiobutton col-6">
-                  <p-radioButton id="category2" name="category" value="Clothing" [(ngModel)]="product.category"></p-radioButton>
-                  <label for="category2">Clothing</label>
+                  <p-radioButton id="category2" name="category" value="Köpek" [(ngModel)]="product.category"></p-radioButton>
+                  <label for="category2">Köpek</label>
               </div>
               <div class="field-radiobutton col-6">
-                  <p-radioButton id="category3" name="category" value="Electronics" [(ngModel)]="product.category"></p-radioButton>
-                  <label for="category3">Electronics</label>
-              </div>
-              <div class="field-radiobutton col-6">
-                  <p-radioButton id="category4" name="category" value="Fitness" [(ngModel)]="product.category"></p-radioButton>
-                  <label for="category4">Fitness</label>
+                  <p-radioButton id="category3" name="category" value="Kuş" [(ngModel)]="product.category"></p-radioButton>
+                  <label for="category3">Kuş</label>
               </div>
           </div>
       </div>
 
       <div class="formgrid grid">
-          <div class="field col">
-              <label for="price">Price</label>
-              <p-inputNumber id="price" [(ngModel)]="product.price" mode="currency" currency="USD" locale="en-US"></p-inputNumber>
-          </div>
-          <div class="field col">
-              <label for="quantity">Quantity</label>
-              <p-inputNumber id="quantity" [(ngModel)]="product.quantity"></p-inputNumber>
-          </div>
+         
       </div>
   </ng-template>
 
