user info updated

--- a/src/app/components/pagess/profile/profile-panel/users-info-listes/users-info-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/users-info-listes/users-info-listes.component.html
@@ -115,6 +115,6 @@
 <div class="row">
   <div class="col-12">
     <button id="edit" style="width: max-content" (click)="toggleEditing()">Düzenle</button>
-    <button id="update" [disabled]="!isEditing">Güncelle</button>
+    <button id="update" [disabled]="!isEditing" style="margin-left: 10%;">Güncelle</button>
   </div>
 </div>
