--- a/src/app/components/pagess/profile/profile-panel/users-listes/users-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/users-listes/users-listes.component.html
@@ -1,7 +1,14 @@
 <div class="row" style="margin: 4px;">
     
 <div class="card">
-    <p-table [value]="customers" sortField="representative.name" sortMode="single" dataKey="representative.name" rowGroupMode="subheader" groupRowsBy="representative.name" [tableStyle]="{'min-width': '70rem'}">
+    <p-table 
+    [paginator]="true"
+    [rows]="5"
+    [tableStyle]="{ 'min-width': '50rem' }"
+    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+    [rowsPerPageOptions]="[5, 10]"
+
+    [value]="customers" sortField="representative.name" sortMode="single" dataKey="representative.name" rowGroupMode="subheader" groupRowsBy="representative.name" [tableStyle]="{'min-width': '70rem'}">
         <ng-template pTemplate="header">
             <tr>
                 <th style="width:15%">Kullanıcı</th>
@@ -14,9 +21,17 @@
             <tr>
                 <td colspan="5">
                     
-                    <button type="button" pButton pRipple [pRowToggler]="customer" class="p-button-text p-button-rounded p-button-plain mr-2" [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></button>
+                  <div style="display: flex; justify-content: space-between;">
+                    <div>
+                        <button type="button" pButton pRipple [pRowToggler]="customer" class="p-button-text p-button-rounded p-button-plain mr-2" [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></button>
                         <img [alt]="customer.representative.name" src="https://primefaces.org/cdn/primeng/images/demo/avatar/{{customer.representative.image}}" width="32" style="vertical-align: middle; margin-right: 15px;" />
                         <span class="font-bold ml-2">{{customer.representative.name}}</span>
+                       </div>
+                        <div>
+                            <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" (click)="deleteCustomer(customer)"></button>
+                            
+                        </div>
+                  </div>                
                 </td>
             </tr>
         </ng-template>
@@ -39,6 +54,8 @@
                 </td>
             </tr>
         </ng-template>
+       
     </p-table>
 </div>
 </div>
+<p-toast></p-toast>
