--- a/src/styles.css
+++ b/src/styles.css
@@ -378,3 +378,6 @@ ul.summary-list > li:last-child  {
 .activity-desk .album a:last-child{
   margin-right: 0px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
