--- a/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.html
@@ -1,19 +1,19 @@
 <!--TOOLBAR-->
 <div class="card">
-  <p-toast></p-toast>
-  <p-toolbar styleClass="mb-4 gap-2">
-    <ng-template pTemplate="left">
-      <button pButton pRipple label="İlan Ekle" icon="pi pi-plus" class="p-button-success mr-2" (click)="openNew()"></button>
-  </ng-template>
-  </p-toolbar>
-
-
+    <p-toast></p-toast>
+    <p-toolbar styleClass="mb-4 gap-2">
+      <ng-template pTemplate="left">
+          <button pButton pRipple label="İlan Ekle" icon="pi pi-plus" class="p-button-success mr-2 custom-button" (click)="openNew()"></button>
+      </ng-template>
+    </p-toolbar>
+ 
+  
   <!--TABLE -->
   <p-table
       #dt
       [value]="products"
       [globalFilterFields]="['name', 'country.name', 'representative.name']"
-      [tableStyle]="{ 'min-width': '75rem' }"
+      [tableStyle]="{ 'min-width': '65rem' }"
       [(selection)]="selectedProducts"
       [rowHover]="true"
       dataKey="id"
@@ -22,44 +22,55 @@
   >
 
       <ng-template pTemplate="header">
+
           <tr>
-              <th style="width: 4rem">
-            
-              </th>
-              <th pSortableColumn="name" style="width: 25%;" >Name <p-sortIcon field="name"></p-sortIcon></th>
-              <th>Image</th>
-              <th pSortableColumn="category" style="width: 25%;">Category <p-sortIcon field="category"></p-sortIcon></th>
-              <th pSortableColumn="rating" style="width: 25%;">Reviews <p-sortIcon field="rating"></p-sortIcon></th>
-              <th></th>
+              <th pSortableColumn="name" style="width: 8%;" >Name <p-sortIcon field="name"></p-sortIcon></th>
+              <th style="width: 8%;">Image</th>
+              <th pSortableColumn="category" style="width: 5%;">Category <p-sortIcon field="category"></p-sortIcon></th>
+              <th pSortableColumn="rating" style="width: 3%;">Reviews <p-sortIcon field="rating"></p-sortIcon></th>
+              <th pSortableColumn="edit/delete" style="width: 3%;"> Edit/Delete </th>
           </tr>
+
       </ng-template>
+
       <ng-template pTemplate="body" let-product>
+
           <tr>
               <td>{{ product.name }}</td>
               <td><img [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image" [alt]="product.name" width="50" class="shadow-4" /></td>
-             
               <td>{{ product.category }}</td>
               <td><p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating></td>
-           
               <td>
                   <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2" (click)="editProduct(product)"></button>
                   <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" (click)="deleteProduct(product)"></button>
               </td>
           </tr>
+
       </ng-template>
+
       <ng-template pTemplate="summary">
           <div class="flex align-items-center justify-content-between">In total there are {{ products ? products.length : 0 }} products.</div>
       </ng-template>
+
   </p-table>
+
 </div>
+
 <p-dialog [(visible)]="productDialog" [style]="{ width: '450px' }" header="Pet Details" [modal]="true" styleClass="p-fluid">
-  <ng-template pTemplate="content">
-      <img [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image" [alt]="product.image" class="block m-auto pb-3" *ngIf="product.image" />
+    <ng-template pTemplate="content">
       <div class="field">
-          <label for="name">Name</label>
-          <input type="text" pInputText id="name" [(ngModel)]="product.name" required autofocus />
-          <small class="p-error" *ngIf="submitted && !product.name">Name is required.</small>
+        <label for="name">Name</label>
+        <input type="text" pInputText id="name" [(ngModel)]="product.name" required autofocus />
+        <small class="p-error" *ngIf="submitted && !product.name">Name is required.</small>
       </div>
+  <!--img ekleme-->
+      <div class="field">
+        <label for="image">Image</label>
+        <!-- Gerçek bir yükleme URL'siyle değiştirin -->
+        <p-fileUpload name="image" url="YOUR_UPLOAD_URL" mode="basic" accept="image/*" chooseLabel="Choose" (onUpload)="onImageUpload($event)" [showUploadButton]="false"></p-fileUpload>
+        <small class="p-error" *ngIf="submitted && !product.image">Image is required.</small>
+      </div>
+
       <div class="field">
           <label for="description">Description</label>
           <textarea id="description" pInputTextarea [(ngModel)]="product.description" required rows="3" cols="20"></textarea>
@@ -75,15 +86,18 @@
 
       <div class="field">
           <label class="mb-3">Category</label>
+
           <div class="formgrid grid">
               <div class="field-radiobutton col-6">
                   <p-radioButton id="category1" name="category" value="Kedi" [(ngModel)]="product.category"></p-radioButton>
                   <label for="category1">Kedi</label>
               </div>
+
               <div class="field-radiobutton col-6">
                   <p-radioButton id="category2" name="category" value="Köpek" [(ngModel)]="product.category"></p-radioButton>
                   <label for="category2">Köpek</label>
               </div>
+
               <div class="field-radiobutton col-6">
                   <p-radioButton id="category3" name="category" value="Kuş" [(ngModel)]="product.category"></p-radioButton>
                   <label for="category3">Kuş</label>
@@ -92,8 +106,8 @@
       </div>
 
       <div class="formgrid grid">
-         
       </div>
+      
   </ng-template>
 
   <ng-template pTemplate="footer">
