--- a/src/app/components/pagess/profile/profile-panel/users-info-listes/users-info-listes.component.css
+++ b/src/app/components/pagess/profile/profile-panel/users-info-listes/users-info-listes.component.css
@@ -17,6 +17,7 @@
     gap: 30%;
 
     font-style: italic;
+    font-size:1vw;
 
   }
 
@@ -43,6 +44,7 @@
     font-style: italic;
     display: flex;
     flex-direction: column;
+    font-size:1vw;
   }
   .bio-row2 {         /*bilgiler2 bio rowları ayır*/
 
@@ -67,6 +69,7 @@
     font-style: italic;
     display: flex;
     flex-direction: column;
+    font-size:1vw;
   }
 
 
@@ -105,6 +108,7 @@
     width: 100%;
 
     font-size: 20px;
+    font-size:1vw;
 
   }
   #edit {
